# ppx_monad

./: .gitignore  Makefile  README.org  dune-project  ppx_monad.opam
.github/workflows/: ci.yml
src/: dune  ppx_monad.ml
src/lib/: dune  helpers.ml  ppx_monad.ml  ppx_monad.mli  ppx_monad_lib.ml  ppx_monad_lib.mli  simpleRegexp.mll
src/lib/expander/: assertExpander.ml  common.ml  expander.ml  forExpander.ml  ifthenelseExpander.ml  letExpander.ml  matchExpander.ml  sequenceExpander.ml  tryExpander.ml  whileExpander.ml
src/ppx/: dune  ppx_monad_ppx.ml
src/ppx/do/: dune
src/ppx/either/: dune  ppx_monad_ppx_either.ml
src/ppx/list/: dune  ppx_monad_ppx_list.ml
src/ppx/monad/: dune  ppx_monad_ppx_monad.ml
src/ppx/option/: dune  ppx_monad_ppx_option.ml
src/ppx/result/: dune  ppx_monad_ppx_result.ml
src/ppx/seq/: dune  ppx_monad_ppx_seq.ml
src/std/: dune  either.ml  list.ml  option.ml  ppx_monad_std_gen.ml  result.ml  seq.ml
src/std/do/: dune  ppx_monad_do.ml
src/std/either/: dune  ppx_monad_either.ml
src/std/list/: dune  ppx_monad_list.ml
src/std/monad/: dune  ppx_monad_monad.ml
src/std/option/: dune  ppx_monad_option.ml
src/std/result/: dune  ppx_monad_result.ml
src/std/seq/: dune  ppx_monad_seq.ml
src/std/std/: dune
test/nop/: README.org  write-dune.sh
test/nop/cases/: assert.ml  dune  for.ml  for_nested.ml  if.ml  let.ml  match.ml  match_exn_caught.ml  match_exn_caught_2.ml  match_exn_caught_by_catchall.ml  match_exn_uncaught.ml  match_guard_false.ml  match_guard_true.ml  match_nasty_exn_uncaught.ml  match_nasty_exn_uncaught_2.ml  (+7 more)
(+3 files in other folders)
